Add Initial Migration and first model "Autor"

--- a/WebApiLibrary/appsettings.Development.json
+++ b/WebApiLibrary/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "connectionStrings": {
+    "defaultConnection": "Data Source=.;Initial Catalog=LibraryAPI;Integrated Security=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
