Add error handling middleware

--- a/WebApiLibrary/appsettings.Development.json
+++ b/WebApiLibrary/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ErrorLoggingMiddleware": {
+    "Message": "Ha ocurrido un error:"
   }
 }
