Add Email Sender Service

--- a/WebApiLibrary/appsettings.Development.json
+++ b/WebApiLibrary/appsettings.Development.json
@@ -10,5 +10,9 @@
   },
   "ErrorLoggingMiddleware": {
     "Message": "Ha ocurrido un error:"
+  },
+  "EmailSettings": {
+    "Subject": "Nuevo libro de interés para usted",
+    "Sender": "virtual.library@email.com"
   }
 }
