--- a/WebApiLibrary/WebApiLibrary.csproj
+++ b/WebApiLibrary/WebApiLibrary.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Migrations\" />
     <Folder Include="wwwroot\" />
     <Folder Include="Services\" />
   </ItemGroup>
